fix: correct missaligned player icons during the blind test

--- a/app/SCSS/blind_tester_component.scss
+++ b/app/SCSS/blind_tester_component.scss
@@ -172,4 +172,11 @@ $UI_margin: 1em;
         position: fixed;
         left: $UI_margin;
     }
+
+    .Players_icons {
+        display: flex;
+        flex-direction: row;
+    }
+
+    
 }
